[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
data-encoding = "2.8.0"
getrandom = "0.3.1"
num = "0.4.3"
ring = "0.17.11"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.5.0"
sled = "0.34.7"
uuid = { version = "1.14", features = ["v4"] }
