[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
data-encoding = "2.8.0"
getrandom = "0.3.1"
log = "0.4.26"
num = "0.4.3"
once_cell = "1.20.3"
ring = "0.17.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.5.0"
sled = "0.34.7"
uuid = { version = "1.14", features = ["v4"] }
